# xero-ai

./: .gitignore  makefile  pyproject.toml
src/xero_ai/: __init__.py  __main__.py  agents.py  gemini.py  invoice.py  schema.py  settings.py  types.py
tests/: test_gemini.py
