[project]
authors = [
    { name = "Konstantin Borovik", email = "kb@lab5.ca" },
]
dependencies = [  ]
description = "Process Xero data with AI"
name = "xero-ai"
readme = "README.md"
requires-python = ">=3.12"
version = "2025.01.17.post1159"

[project.scripts]
xero-ai = "xero_ai:main"

[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [ "C90", "F", "N", "N", "PL", "RUF", "SIM", "UP" ]

[tool.ruff.lint.pydocstyle]
convention = "google"
