[project]
authors = [
  { name = "Konstantin Borovik", email = "kb@lab5.ca" },
]
dependencies = [
  "pydantic-ai-slim[anthropic,logfire,openai,vertexai]>=0.0.19",
  "xero-python>=6.3.0",
]
description = "Convert unstructured data into structured data for Xero Accounting"
name = "xero-ai"
readme = "README.md"
requires-python = ">=3.12"
version = "2025.01.19.post909"

[project.scripts]
xero-ai = "xero_ai:main"

[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "python-dotenv>=1.0.1",
  "ruff>=0.9.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [ "C90", "F", "N", "N", "PL", "RUF", "SIM", "UP" ]

[tool.ruff.lint.pydocstyle]
convention = "google"
